<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_blur"
    android:orientation="vertical"
    tools:context="fixtpro.com.fixtpro.ContactUsActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionbar_bg"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView

                android:id="@+id/back"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:text="@string/back"/>
            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/cancel_job"/>
            <TextView
                android:layout_marginRight="12dp"
                android:layout_alignParentRight="true"
                android:id="@+id/done"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:text="@string/next"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/declinejob_cross"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/register_button_text"
        android:text="@string/ohno"/>
    <TextView

        android:id="@+id/areusure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/sure_cancel_text"
        android:textColor="@color/register_button_text"
        android:text="@string/sure_cancel"/>
    <TextView
        android:id="@+id/backup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/register_button_text"
        android:text="@string/charge_customer"/>
    <View
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <EditText

        android:id="@+id/txtCancelReason"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="14dp"
        android:textColorHint="@color/register_button_text"
        android:textColor="@color/register_button_text"
        android:gravity="top"
        android:padding="8dp"
        android:layout_gravity="center"
        android:hint="@string/canceledittext"
        android:background="@drawable/round_white_back_transparent_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/commonpadding"
        android:layout_marginRight="@dimen/commonpadding">
        <TextView
            android:id="@+id/txtDiagnostic"
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="wrap_content"
            android:text="@string/diagnostic"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonmediumtxt" />
        <TextView
            android:id="@+id/txtDiagnosticDoller"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_height="wrap_content"
            android:text="$ 75.00"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonmediumtxt" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/commonpadding"
        android:layout_marginRight="@dimen/commonpadding">
        <TextView
            android:id="@+id/txtSubTotal"
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonmediumtxt" />
        <TextView
            android:id="@+id/txtSubTotalDoller"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_height="wrap_content"
            android:text="$ 75.00"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonmediumtxt" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"></View>
    <include layout="@layout/leftmar_line"></include>
    <!--Total..-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/commonpadding"
        android:layout_marginRight="@dimen/commonpadding">
        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonlargetxt" />
        <TextView
            android:id="@+id/txtTotalDoller"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_height="wrap_content"
            android:text="$ 75.00"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@color/register_button_text"
            android:textSize="@dimen/commonmediumtxt" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>

<RelativeLayout
    android:id="@+id/tap_Signature"
    android:layout_marginLeft="8dp"
    android:layout_marginBottom="12dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="20dp"

    android:background="@drawable/round_corner_white"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtSignature"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textColor="@color/orange_signin_back"
        android:text="@string/owner_signature"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="match_parent" />
    <ImageView
        android:visibility="gone"
        android:id="@+id/imgSignature"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>

</LinearLayout>
